--- a/northwind/dbt_project.yml
+++ b/northwind/dbt_project.yml
@@ -2,12 +2,12 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'northwind'
+name: 'my_new_project'
 version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'Snowflake'
+profile: 'default'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -35,10 +35,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # continue to be built as views. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 
-# after
 models:
-  quickstart:
-    +materialized: table
-    database: analytics
-    +schema: quickstart
-
+  my_new_project:
+    # Applies to all files under models/example/
+    example:
+      +materialized: table
